--- a/design/index.html
+++ b/design/index.html
@@ -32,13 +32,13 @@
       </tr>
       <tr class="shall" onclick="NavagateTo('/design/4.html');">
         <td>4</td>
-        <td>Shall have ambient lighting</td>
+        <td>Shall have ambient lighting.</td>
         <td>Everything at least a little bit visible.</td>
         <td>80%</td>
       </tr>
       <tr class="shall" onclick="NavagateTo('/design/5.html');">
         <td>5</td>
-        <td>Shall have directional lighting</td>
+        <td>Shall have directional lighting.</td>
         <td>Lighting from a point, illuminating graph, should see things like shadows, variances in illumination according to angle of intersection.</td>
         <td>80%</td>
       </tr>
