--- a/design/requirement1.html
+++ b/design/requirement1.html
@@ -6,8 +6,12 @@
   <body>
     <h1>Shall create 3d surface from implicit functions</h1>
     <h2>Definitions:</h2>
-    <p></p>
+    <p>
+      Implicit Function - A function written in the form z=f(x,y)
+    </p>
     <h2>Descriptions:</h2>
-    <p></p>
+    <p>
+      
+    </p>
   </body>
 </html>
