--- a/design/fragment_shader.html
+++ b/design/fragment_shader.html
@@ -9,6 +9,7 @@
     <p>
     </p>
     <h2>Descriptions:</h2>
+      This will be written in GLSL. This takes care of properties of actual pixels.
     <p>
     </p>
   </body>
