--- a/design/interface.html
+++ b/design/interface.html
@@ -9,6 +9,7 @@
     <p>
     </p>
     <h2>Descriptions:</h2>
+      This will have 2 parts. Input of settings, and output to canvas.
     <p>
     </p>
   </body>
