--- a/design/settings.html
+++ b/design/settings.html
@@ -10,6 +10,17 @@
     </p>
     <h2>Descriptions:</h2>
     <p>
+      This is where the user will input settings for the following:
+      <ul>
+        <li>Rotation</li>
+        <li>Directional Lighting</li>
+        <li>Ambient Lighting</li>
+        <li>Equation(s) to graph</li>
+        <li>Graphing bounds</li>
+        <li>Zoom of graph</li>
+        <li>Color</li>
+        <li>Display calculated values for points</li>
+      </ul>
     </p>
   </body>
 </html>
