--- a/design/transformation_matrix.html
+++ b/design/transformation_matrix.html
@@ -4,8 +4,9 @@
     <script type="text/javascript" src="/js/navagation.js"></script>
   </head>
   <body>
-    <h1>Translation Matrix</h1>
+    <h1>Transformation Matrix</h1>
     <h2>Definitions:</h2>
+
     <p>
     </p>
     <h2>Descriptions:</h2>
