--- a/design/vertex_shader.html
+++ b/design/vertex_shader.html
@@ -10,6 +10,7 @@
     </p>
     <h2>Descriptions:</h2>
     <p>
+      This will be writen in GLSL. This sets up the vertexes with properties required for rendering.
     </p>
   </body>
 </html>
