--- a/design/surface.html
+++ b/design/surface.html
@@ -10,6 +10,13 @@
     </p>
     <h2>Descriptions:</h2>
     <p>
+      This will have a reference to a subset of the points. This will be able to generate points for drawing to WebGL.
+      This will need the following functions:
+      <ul>
+        <li>Initial WebGL buffers - This is to store the points in WebGL for usage.</li>
+        <li>Insert points into buffers</li>
+        <li>Draw - This is to draw the surface</li>
+      </ul>
     </p>
   </body>
 </html>
