--- a/design/canvas.html
+++ b/design/canvas.html
@@ -10,11 +10,11 @@
     <p>
     </p>
     <h2>Descriptions:</h2>
-      In order to use the canvas with WebGL, it will need to have the following things:
+      In order to use the canvas with WebGL, it will need to have the following functions:
       <ul>
         <li>Canvas Initializer - This will set up the canvas to have WebGL bindings.</li>
         <li>Shader Initializer - This will get shaders ready to be used within the rest of the program.</li>
-        
+        <li>Draw - This will call the draw function from the equations, and make sure the transformation matrix and shaders are used.</li>
       </ul>
     <p>
     </p>
