--- a/prototype/index.html
+++ b/prototype/index.html
@@ -195,28 +195,28 @@
       <div class="rotation">
         <label for="x_rotation">
           Rotation X:
-        </lablel>
+        </label>
         <input type="text" id="x_rotation" value="0" onblur="drawScene();">
         <label for="y_rotation">
           Y:
-        </lablel>
+        </label>
         <input type="text" id="y_rotation" value="0" onblur="drawScene();">
         <label for="z_rotation">
           Z:
-        </lablel>
+        </label>
         <input type="text" id="z_rotation" value="0" onblur="drawScene();">
         <br>
         <label for="x_translation">
           Translation X:
-        </lablel>
+        </label>
         <input type="text" id="x_translation" value="0" onblur="drawScene();">
         <label for="y_translation">
           Y:
-        </lablel>
+        </label>
         <input type="text" id="y_translation" value="0" onblur="drawScene();">
         <label for="z_translation">
           Z:
-        </lablel>
+        </label>
         <input type="text" id="z_translation" value="-7" onblur="drawScene();">
         <br>
         <table>
