--- a/prototype/index.html
+++ b/prototype/index.html
@@ -191,33 +191,33 @@
   </head>
   <body onload="on_page_load();">
     <div class="settings">
-      <h3>Rotation Settings</h3>
-      <div class="rotation">
+      <h3 onclick="toggle_display('rotation_settings')">Rotation Settings</h3>
+      <div id="rotation_settings" class="rotation">
         <label for="x_rotation">
           Rotation X:
         </label>
-        <input type="text" id="x_rotation" value="0" onblur="drawScene();">
+        <input type="text" id="x_rotation" value="0" onblur="drawScene();" />
         <label for="y_rotation">
           Y:
         </label>
-        <input type="text" id="y_rotation" value="0" onblur="drawScene();">
+        <input type="text" id="y_rotation" value="0" onblur="drawScene();" />
         <label for="z_rotation">
           Z:
         </label>
-        <input type="text" id="z_rotation" value="0" onblur="drawScene();">
+        <input type="text" id="z_rotation" value="0" onblur="drawScene();" />
         <br>
         <label for="x_translation">
           Translation X:
         </label>
-        <input type="text" id="x_translation" value="0" onblur="drawScene();">
+        <input type="text" id="x_translation" value="0" onblur="drawScene();" />
         <label for="y_translation">
           Y:
         </label>
-        <input type="text" id="y_translation" value="0" onblur="drawScene();">
+        <input type="text" id="y_translation" value="0" onblur="drawScene();" />
         <label for="z_translation">
           Z:
         </label>
-        <input type="text" id="z_translation" value="-7" onblur="drawScene();">
+        <input type="text" id="z_translation" value="-7" onblur="drawScene();" />
         <br>
         <table>
           <tr>
@@ -253,53 +253,66 @@
         </table>
         <br>
       </div>
-      <h3>Perspective Settings</h3>
-      <div class="perspective">
+      <h3 onclick="toggle_display('perspective_settings')">Perspective Settings</h3>
+      <div id="perspective_settings" class="perspective">
         <label for="perspective_angle">
             Perspective angle:
         </label>
-        <input type="text" id="perspective_angle" value="0.7853">
+        <input type="text" id="perspective_angle" value="0.7853" />
         <br>
         <label for="near_clip">
             Near clip:
         </label>
-        <input type="text" id="near_clip" value="0.1">
+        <input type="text" id="near_clip" value="0.1" />
         <br>
         <label for="far_clip">
             Far clip:
         </label>
-        <input type="text" id="far_clip" value="100">
+        <input type="text" id="far_clip" value="100" />
       </div>
-      <h3>Ambient Light Settings</h3>
-      <div class="ambient_lighting">
+      <h3 onclick="toggle_display('ambient_light_settings')">Ambient Light Settings</h3>
+      <div id="ambient_light_settings" class="ambient_lighting">
         <label for="ambient_lighting_red">
           Color - R:
         </label>
-        <input type="text" id="ambient_lighting_red">
+        <input type="text" id="ambient_lighting_red" />
         <label for="ambient_lighting_green">
           G:
         </label>
-        <input type="text" id="ambient_lighting_green">
+        <input type="text" id="ambient_lighting_green" />
         <label for="ambient_lighting_blue">
           B:
         </label>
-        <input type="text" id="ambient_lighting_blue">
+        <input type="text" id="ambient_lighting_blue" />
         <br>
       </div>
-      <h3>Directional Lighting Settings</h3>
-      <div class="directional_lighting">
+      <h3 onclick="toggle_display('directional_lighting_settings')">Directional Lighting Settings</h3>
+      <div id="directional_lighting_settings" class="directional_lighting">
         <label for="directional_lighting_red">
           Color - R:
         </label>
-        <input type="text" id="directional_lighting_red">
+        <input type="text" id="directional_lighting_red" />
         <label for="directional_lighting_green">
           G:
         </label>
-        <input type="text" id="directional_lighting_green">
+        <input type="text" id="directional_lighting_green" />
         <label for="directional_lighting_blue">
           B:
         </label>
-        <input type="text" id="directional_lighting_blue">
+        <input type="text" id="directional_lighting_blue" />
+        <br>
+        <label for="directional_lighting_x">
+          Direction - X:
+        </label>
+        <input type="text" id="directional_lighting_x" />
+        <label for="directional_lighting_y">
+          Y:
+        </label>
+        <input type="text" id="directional_lighting_y" />
+        <label for="directional_lighting_z">
+          Z:
+        </label>
+        <input type="text" id="directional_lighting_z" />
         <br>
       </div>
     </div>
