add vector information

--- a/prototype/index.html
+++ b/prototype/index.html
@@ -253,7 +253,7 @@
         </table>
         <br>
       </div>
-      <h3 onclick="toggle_display('perspective_settings')">Perspective Settings</h3>
+      <h3 onclick="toggle_display('perspective_settings');">Perspective Settings</h3>
       <div id="perspective_settings" class="perspective">
         <label for="perspective_angle">
             Perspective angle:
@@ -270,7 +270,7 @@
         </label>
         <input type="text" id="far_clip" value="100" />
       </div>
-      <h3 onclick="toggle_display('ambient_light_settings')">Ambient Light Settings</h3>
+      <h3 onclick="toggle_display('ambient_light_settings');">Ambient Light Settings</h3>
       <div id="ambient_light_settings" class="ambient_lighting">
         <label for="ambient_lighting_red">
           Color - R:
@@ -286,7 +286,7 @@
         <input type="text" id="ambient_lighting_blue" />
         <br>
       </div>
-      <h3 onclick="toggle_display('directional_lighting_settings')">Directional Lighting Settings</h3>
+      <h3 onclick="toggle_display('directional_lighting_settings');">Directional Lighting Settings</h3>
       <div id="directional_lighting_settings" class="directional_lighting">
         <label for="directional_lighting_red">
           Color - R:
