put in some default values for lighting fields

--- a/prototype/index.html
+++ b/prototype/index.html
@@ -275,15 +275,15 @@
         <label for="ambient_lighting_red">
           Color - R:
         </label>
-        <input type="text" id="ambient_lighting_red" />
+        <input type="text" id="ambient_lighting_red" value="0.5" />
         <label for="ambient_lighting_green">
           G:
         </label>
-        <input type="text" id="ambient_lighting_green" />
+        <input type="text" id="ambient_lighting_green" value="0.5" />
         <label for="ambient_lighting_blue">
           B:
         </label>
-        <input type="text" id="ambient_lighting_blue" />
+        <input type="text" id="ambient_lighting_blue" value="0.5" />
         <br>
       </div>
       <h3 onclick="toggle_display('directional_lighting_settings');">Directional Lighting Settings</h3>
@@ -291,28 +291,28 @@
         <label for="directional_lighting_red">
           Color - R:
         </label>
-        <input type="text" id="directional_lighting_red" />
+        <input type="text" id="directional_lighting_red" value="0.5" />
         <label for="directional_lighting_green">
           G:
         </label>
-        <input type="text" id="directional_lighting_green" />
+        <input type="text" id="directional_lighting_green" value="0.5" />
         <label for="directional_lighting_blue">
           B:
         </label>
-        <input type="text" id="directional_lighting_blue" />
+        <input type="text" id="directional_lighting_blue" value="0.5"/>
         <br>
         <label for="directional_lighting_x">
           Direction - X:
         </label>
-        <input type="text" id="directional_lighting_x" />
+        <input type="text" id="directional_lighting_x" value="0.5" />
         <label for="directional_lighting_y">
           Y:
         </label>
-        <input type="text" id="directional_lighting_y" />
+        <input type="text" id="directional_lighting_y" value="0.5" />
         <label for="directional_lighting_z">
           Z:
         </label>
-        <input type="text" id="directional_lighting_z" />
+        <input type="text" id="directional_lighting_z" value="0.5" />
         <br>
       </div>
     </div>
