add bounds settings

--- a/prototype/index.html
+++ b/prototype/index.html
@@ -315,6 +315,44 @@
         <input type="text" id="directional_lighting_z" value="0.5" />
         <br>
       </div>
+      <h3 onclick="toggle_display('bound_settings');">Bounds</h3>
+      <div id="bound_settings">
+        <label for="x_min">
+          X Min:
+        </label>
+        <input type="text" id="x_min" value="-10" />
+        <label for="x_max">
+          Max:
+        </label>
+        <input type="text" id="x_max" value="-10" />
+        <label for="x_step">
+          Step:
+        </label>
+        <input type="text" id="x_step" value="-10" />
+        <br>
+        <label for="y_min">
+          Y Min:
+        </label>
+        <input type="text" id="y_min" value="-10" />
+        <label for="y_max">
+          Max:
+        </label>
+        <input type="text" id="y_max" value="-10" />
+        <label for="y_step">
+          Step:
+        </label>
+        <input type="text" id="y_step" value="-10" />
+        <br>
+        <label for="z_min">
+          Z Min:
+        </label>
+        <input type="text" id="z_min" value="-10" />
+        <label for="z_max">
+          Max:
+        </label>
+        <input type="text" id="z_max" value="-10" />
+        <br>
+      </div>
     </div>
     <div class="canvas">
       <canvas id="canvas" width="500" height="500">
