--- a/prototype/index.html
+++ b/prototype/index.html
@@ -11,24 +11,35 @@
         precision mediump float;
 
         varying vec4 vColor;
+        varying vec3 vLightWeighting;
 
         void main(void) {
-          gl_FragColor = vColor;
+          gl_FragColor = vec4(vColor.rgb * vLightWeighting, vColor.a);
         }
     </script>
 
     <script id="shader-vs" type="x-shader/x-vertex">
       attribute vec3 aVertexPosition;
-      attribute vec4 aVertexColor;
+      attribute vec3 aVertexNormal;
 
       uniform mat4 uMVMatrix;
       uniform mat4 uPMatrix;
+      uniform mat3 uNMatrix;
+
+      uniform vec3 uAmbientColor;
+
+      uniform vec3 uLightingDirection;
+      uniform vec3 uDirectionalColor;
 
       varying vec4 vColor;
+      varying vec3 vLightWeighting;
 
       void main(void) {
         gl_Position = uPMatrix * uMVMatrix * vec4(aVertexPosition, 1.0);
         vColor = vec4(1.0, 1.0, 1.0, 1.0);
+        vec3 transformedNormal = uNMatrix * aVertexNormal;
+        float directionalLightWeighting = abs(dot(transformedNormal, uLightingDirection));
+        vLightWeighting = uAmbientColor + uDirectionalColor * directionalLightWeighting;
       }
     </script>
 
@@ -104,14 +115,24 @@
 
         shaderProgram.vertexPositionAttribute = gl.getAttribLocation(shaderProgram, "aVertexPosition");
         gl.enableVertexAttribArray(shaderProgram.vertexPositionAttribute);
+        shaderProgram.vertexNormalAttribute = gl.getAttribLocation(shaderProgram, "aVertexNormal");
+        gl.enableVertexAttribArray(shaderProgram.vertexNormalAttribute);
 
         shaderProgram.pMatrixUniform = gl.getUniformLocation(shaderProgram, "uPMatrix");
         shaderProgram.mvMatrixUniform = gl.getUniformLocation(shaderProgram, "uMVMatrix");
+        shaderProgram.nMatrixUniform = gl.getUniformLocation(shaderProgram, "uNMatrix");
+        shaderProgram.ambientColorUniform = gl.getUniformLocation(shaderProgram, "uAmbientColor");
+        shaderProgram.lightingDirectionUniform = gl.getUniformLocation(shaderProgram, "uLightingDirection");
+        shaderProgram.directionalColorUniform = gl.getUniformLocation(shaderProgram, "uDirectionalColor");
       }
 
       function setMatrixUniforms() {
         gl.uniformMatrix4fv(shaderProgram.pMatrixUniform, false, p_matrix.to_p_matrix());
         gl.uniformMatrix4fv(shaderProgram.mvMatrixUniform, false, mv_matrix.to_mv_matrix());
+        gl.uniformMatrix3fv(shaderProgram.nMatrixUniform, false, mv_matrix.to_normal_matrix());
+        gl.uniform3f(shaderProgram.ambientColorUniform,0.3,0.2,0.1);
+        gl.uniform3fv(shaderProgram.lightingDirectionUniform, [0, Math.sqrt(2)/2, -Math.sqrt(2)/2]);
+        gl.uniform3f(shaderProgram.directionalColorUniform,0.7,0.8,0.9);
       }
 
 
@@ -130,16 +151,33 @@
         gl.bufferData(gl.ARRAY_BUFFER, new Float32Array(vertices), gl.STATIC_DRAW);
         squareVertexPositionBuffer.itemSize = 3;
         squareVertexPositionBuffer.numItems = 4;
+
+        squareVertexNormalBuffer = gl.createBuffer();
+        gl.bindBuffer(gl.ARRAY_BUFFER, squareVertexNormalBuffer);
+        normals = [
+          -0.4472135954999579, 0.0, 0.8944271909999159,
+          -0.4082482904638631, -0.4082482904638631, 0.8164965809277261,
+          -0.7071067811865475, 0.0, 0.7071067811865475,
+          -0.6666666666666666, -0.3333333333333333, 0.6666666666666666
+        ];
+        gl.bufferData(gl.ARRAY_BUFFER, new Float32Array(normals), gl.STATIC_DRAW);
+        squareVertexNormalBuffer.itemSize = 3;
+        squareVertexNormalBuffer.numItems = 4;
       }
 
 
       function drawScene() {
         gl.viewport(0, 0, gl.viewportWidth, gl.viewportHeight);
         gl.clear(gl.COLOR_BUFFER_BIT | gl.DEPTH_BUFFER_BIT);
+        setMatrixUniforms();
 
         gl.bindBuffer(gl.ARRAY_BUFFER, squareVertexPositionBuffer);
         gl.vertexAttribPointer(shaderProgram.vertexPositionAttribute, squareVertexPositionBuffer.itemSize, gl.FLOAT, false, 0, 0);
-        setMatrixUniforms();
+
+        gl.bindBuffer(gl.ARRAY_BUFFER, squareVertexNormalBuffer);
+        gl.vertexAttribPointer(shaderProgram.vertexNormalAttribute, squareVertexNormalBuffer.itemSize, gl.FLOAT, false, 0, 0);
+
+
         gl.drawArrays(gl.TRIANGLE_STRIP, 0, squareVertexPositionBuffer.numItems);
       }
 
@@ -153,8 +191,6 @@
 
         gl.clearColor(0.0, 0.0, 0.0, 1.0);
         gl.enable(gl.DEPTH_TEST);
-
-        drawScene();
       }
 
       var autorotate = window.setInterval( function() {
@@ -177,7 +213,7 @@
           {
             window.clearInterval(autorotate);
           }
-          drawScene();
+          update_transformation_matrix();
         },
         40
       );
