--- a/prototype/index.html
+++ b/prototype/index.html
@@ -132,9 +132,9 @@
         gl.uniformMatrix4fv(shaderProgram.pMatrixUniform, false, p_matrix.to_p_matrix());
         gl.uniformMatrix4fv(shaderProgram.mvMatrixUniform, false, mv_matrix.to_mv_matrix());
         gl.uniformMatrix3fv(shaderProgram.nMatrixUniform, false, mv_matrix.to_normal_matrix());
-        gl.uniform3f(shaderProgram.ambientColorUniform,0.3,0.2,0.1);
-        gl.uniform3fv(shaderProgram.lightingDirectionUniform, [0, 0, -1]);
-        gl.uniform3f(shaderProgram.directionalColorUniform,0.7,0.8,0.9);
+        gl.uniform3fv(shaderProgram.ambientColorUniform, ambient_light.color);
+        gl.uniform3fv(shaderProgram.lightingDirectionUniform, directional_light.unit_vector());
+        gl.uniform3fv(shaderProgram.directionalColorUniform, directional_light.color);
       }
 
 
@@ -361,11 +361,11 @@
         <label for="x_max">
           Max:
         </label>
-        <input type="text" id="x_max" value="-10" onblur="update_bounds();" />
+        <input type="text" id="x_max" value="10" onblur="update_bounds();" />
         <label for="x_step">
           Step:
         </label>
-        <input type="text" id="x_step" value="-10" onblur="update_bounds();" />
+        <input type="text" id="x_step" value="0.1" onblur="update_bounds();" />
         <br>
         <label for="y_min">
           Y Min:
@@ -374,11 +374,11 @@
         <label for="y_max">
           Max:
         </label>
-        <input type="text" id="y_max" value="-10" onblur="update_bounds();" />
+        <input type="text" id="y_max" value="10" onblur="update_bounds();" />
         <label for="y_step">
           Step:
         </label>
-        <input type="text" id="y_step" value="-10" onblur="update_bounds();" />
+        <input type="text" id="y_step" value="0.1" onblur="update_bounds();" />
         <br>
         <label for="z_min">
           Z Min:
@@ -387,7 +387,7 @@
         <label for="z_max">
           Max:
         </label>
-        <input type="text" id="z_max" value="-10" onblur="update_bounds();" />
+        <input type="text" id="z_max" value="10" onblur="update_bounds();" />
         <br>
       </div>
     </div>
