--- a/design/index.html
+++ b/design/index.html
@@ -27,7 +27,7 @@
       <tr class="shall" onclick="NavagateTo('/design/requirement3.html');">
         <td>3</td>
         <td>Shall identify asymptotes and split surfaces as appropriate.</td>
-        <td>Shall include several (at least 5) functions with asymptotes.</td>
+        <td>Shall include several (at least 5) functions with asymptotes to test.</td>
         <td>80%</td>
       </tr>
       <tr class="shall" onclick="NavagateTo('/design/requirement4.html');">
