--- a/test/implicit/test3.html
+++ b/test/implicit/test3.html
@@ -2,15 +2,15 @@
   <head>
     <title>Braxton's Senior Project - Design Documents</title>
     <link rel="stylesheet" type="text/css" href="../css/all.css">
-    <script type="text/javascript" src="../js/navagation.js"></script>
-    <script type="text/javascript" src="../js/transformation_matrix.js"></script>
-    <script type="text/javascript" src="../js/perspective_matrix.js"></script>
-    <script type="text/javascript" src="../js/ambient_light.js"></script>
-    <script type="text/javascript" src="../js/directional_light.js"></script>
-    <script type="text/javascript" src="../js/point.js"></script>
-    <script type="text/javascript" src="../js/surface.js"></script>
-    <script type="text/javascript" src="../js/equation.js"></script>
-    <script type="text/javascript" src="../js/main.js"></script>
+    <script type="text/javascript" src="/js/navagation.js"></script>
+    <script type="text/javascript" src="/js/transformation_matrix.js"></script>
+    <script type="text/javascript" src="/js/perspective_matrix.js"></script>
+    <script type="text/javascript" src="/js/ambient_light.js"></script>
+    <script type="text/javascript" src="/js/directional_light.js"></script>
+    <script type="text/javascript" src="/js/point.js"></script>
+    <script type="text/javascript" src="/js/surface.js"></script>
+    <script type="text/javascript" src="/js/equation.js"></script>
+    <script type="text/javascript" src="/js/main.js"></script>
 
     <script id="shader-fs" type="x-shader/x-fragment">
         precision mediump float;
