--- a/design/requirement2.html
+++ b/design/requirement2.html
@@ -6,8 +6,29 @@
   <body>
     <h1>Shall create 3d surface from parametric functions</h1>
     <h2>Definitions:</h2>
-    <p></p>
+    <p>
+      Parametric functions are written as 3 equations like:<br>
+      
+    </p>
     <h2>Descriptions:</h2>
     <p></p>
+    <h2>Tests:</h2>
+    <ul>
+      <li>
+        <a href="/test/parametric/test1.html">test1</a>
+      </li>
+      <li>
+        <a href="/test/parametric/test2.html">test2</a>
+      </li>
+      <li>
+        <a href="/test/parametric/test3.html">test3</a>
+      </li>
+      <li>
+        <a href="/test/parametric/test4.html">test4</a>
+      </li>
+      <li>
+        <a href="/test/parametric/test5.html">test5</a>
+      </li>
+    </ul>
   </body>
 </html>
