--- a/test/implicit/test5.html
+++ b/test/implicit/test5.html
@@ -149,7 +149,7 @@
     </script>
 
   </head>
-  <body onload="on_page_load('Math.log(x * y))');">
+  <body onload="on_page_load('Math.log(x * y)');">
     <div class="canvas">
       <canvas id="canvas" width="500" height="500">
       </canvas>
