--- a/index.html
+++ b/index.html
@@ -3,7 +3,8 @@
     <title>Braxton's Senior Project</title>
   </head>
   <body>
-    <h1></h1>
-    
+    <h1><a href="/design">Design</a></h1>
+    <h1><a href="/prototype">Prototype</a></h1>
+    <h1><a href="/test">Test</a></h1>
   </body>
 </html>
