--- a/prototype/index.html
+++ b/prototype/index.html
@@ -149,7 +149,7 @@
     </script>
 
   </head>
-  <body onload="on_page_load('Math.sqrt(25 - x * x - y * y)');">
+  <body onload="on_page_load('this.factorial(x + y) / (this.factorial(x) * this.factorial(y) * 20000)');">
     <div class="canvas">
       <canvas id="canvas" width="500" height="500">
       </canvas>
